--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,7 +29,7 @@ header{
     padding: 0%;
 }
  
-.seccion1{
+.seccion1,.seccion6{
     background-color:var(--color5);
     padding-inline: 10%;
     padding-block: 10%;
@@ -60,6 +60,7 @@ header{
 
 .tarjeta{
     font-size: small;
+    list-style-type: none;
     
     
 }
@@ -83,8 +84,41 @@ header{
     padding-right:12%;
 }
 
-.resume{
-    border-right: 1px solid var(--color4);
-    font-size:smaller;
+.logoGrande{
+    height:auto;
+    width: 15px;
+    padding-left:5%;
+    padding-right:5%;
 }
 
+.resume{
+    align-items:baseline;
+    
+}
+.experiencia{
+    border-right: 1px solid var(--color4);
+}
+
+
+.cv{
+    border-bottom: 1px dotted var(--color2) ;
+    padding: 2%;
+    list-style-type:circle;
+}
+
+ul{
+    flex:auto;
+    align-self: flex-start;
+}
+
+.blanquito{
+    font-size: large;
+    font-weight:600;
+    color: white;
+}
+
+.seccion7{
+    background-color: black;
+    font-weight: 400;
+    color:white;
+}
